force-app/main/default/objects/Attendee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select Address</description>
    <inlineHelpText>Gives Information about Address</inlineHelpText>
    <label>Address</label>
    <referenceTo>Location_Address_Book__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>