force-app/main/default/objects/Attendee__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Enter your Company Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provides Information about Company Name</inlineHelpText>
    <label>Company Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>