force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Enter Email Address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide Information about email address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>