force-app/main/default/objects/Attendee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Enter your Phone Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Gives Information about Phone Number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>